styling (SOMETHING WENT WRONG WITH BESTÄTIGUNGSSEITE: NO VALUE DATA)

--- a/Components/DankesSeite.wo/DankesSeite.html
+++ b/Components/DankesSeite.wo/DankesSeite.html
@@ -1,14 +1,42 @@
 <!DOCTYPE HTML PUBLIC "-//W3C//DTD HTML 3.2//EN">
 <html>
 	<head>
+		<style>
+body {
+	padding: 5%;
+}
+ul {
+	list-style-type: none;
+}
+.content {
+	border: 1px solid rgb(68,174,206);
+	padding: 5%;
+}
+h1 {
+	text-decoration: underline;
+	padding-bottom: 2.5%;
+	display: inline-block;
+}
+#login {
+	position: relative;
+	float: right;
+}
+input[type="image"] {
+	margin: 2.5%;
+}
+.line {
+	border-bottom: 1px solid rgb(68,174,206);
+}
+
+</style>
+		<link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/css/bootstrap.min.css" integrity="sha384-ggOyR0iXCbMQv3Xipma34MD+dH/1fQ784/j6cY/iJTQUOhcWr7x9JvoRxT2MZw1T" crossorigin="anonymous">
 		<title>Besten Dank</title>
-		<!--<link rel="stylesheet" type="text/css" href="../WebServerResources/dankesseite.css">-->
 	</head>
 	<body>
 	<h1>Besten Dank für Ihre Bestellung</h1>
-	
+
 	<webobject name="dankesbild" />
-	
-	
+
+
 	</body>
 </html>
