Tried to terminate session and fixed kundeninfoseite

--- a/Components/DankesSeite.wo/DankesSeite.html
+++ b/Components/DankesSeite.wo/DankesSeite.html
@@ -33,10 +33,11 @@ input[type="image"] {
 		<title>Besten Dank</title>
 	</head>
 	<body>
+	<div class="content">
 	<h1>Besten Dank für Ihre Bestellung</h1>
-
+	<br>
 	<webobject name="dankesbild" />
-
+</div>
 
 	</body>
 </html>
