--- a/Components/AdministrationsSeite.wo/AdministrationsSeite.html
+++ b/Components/AdministrationsSeite.wo/AdministrationsSeite.html
@@ -29,17 +29,18 @@ input[type="image"] {
 }
 
 </style>
-	
+
 		<link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/css/bootstrap.min.css" integrity="sha384-ggOyR0iXCbMQv3Xipma34MD+dH/1fQ784/j6cY/iJTQUOhcWr7x9JvoRxT2MZw1T" crossorigin="anonymous">
 		<title>Administration</title>
 		<!--<link rel="stylesheet" type="text/css" href="../WebServerResources/dankesseite.css">-->
 	</head>
 	<body>
+			<div class="content">
 	<h1>Sie sind Administrator</h1>
 
 	<webobject name="backbutton">Zurück</webobject>
 
-
+</div>
 
 	</body>
 </html>
