--- a/Components/ArtikelSeite.wo/ArtikelSeite.html
+++ b/Components/ArtikelSeite.wo/ArtikelSeite.html
@@ -33,6 +33,7 @@ input[type="image"] {
 		<title>Artikel</title>
 	</head>
 	<body>
+			<div class="content">
 	<h1>Bestellung: <webobject name = "artikelname"></webobject></h1>
 
 	<br>
@@ -65,5 +66,6 @@ input[type="image"] {
 		<webobject name = "backbutton">Abbrechen</webobject>
 
 	</webobject>
+</div>
 	</body>
 </html>
