--- a/Components/LoginSeite.wo/LoginSeite.html
+++ b/Components/LoginSeite.wo/LoginSeite.html
@@ -34,6 +34,7 @@ input[type="image"] {
 		<!--<link rel="stylesheet" type="text/css" href="../WebServerResources/dankesseite.css">-->
 	</head>
 	<body>
+			<div class="content">
 	<webobject name = "loginForm">
 		Benutzername:<br>
 		<webobject name = "username" /><br>
@@ -45,6 +46,6 @@ input[type="image"] {
 	</webobject>
 	<webobject name="backbutton">Zurück</webobject>
 
-
+</div>
 	</body>
 </html>
