--- a/Components/AdministrationsSeite.wo/AdministrationsSeite.html
+++ b/Components/AdministrationsSeite.wo/AdministrationsSeite.html
@@ -11,6 +11,7 @@ ul {
 .content {
 	border: 1px solid rgb(68,174,206);
 	padding: 5%;
+	color: rgb(33,93,112);
 }
 h1 {
 	text-decoration: underline;
@@ -37,7 +38,7 @@ input[type="image"] {
 	<body>
 			<div class="content">
 	<h1>Sie sind Administrator</h1>
-
+	<br>
 	<webobject name="backbutton">Zurück</webobject>
 
 </div>
