--- a/Components/LoginSeite.wo/LoginSeite.html
+++ b/Components/LoginSeite.wo/LoginSeite.html
@@ -11,6 +11,7 @@ ul {
 .content {
 	border: 1px solid rgb(68,174,206);
 	padding: 5%;
+	color: rgb(33,93,112);
 }
 h1 {
 	text-decoration: underline;
@@ -27,10 +28,12 @@ input[type="image"] {
 .line {
 	border-bottom: 1px solid rgb(68,174,206);
 }
-
+.errorText {
+	color: rgb(68,174,206);
+}
 </style>
 		<link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/css/bootstrap.min.css" integrity="sha384-ggOyR0iXCbMQv3Xipma34MD+dH/1fQ784/j6cY/iJTQUOhcWr7x9JvoRxT2MZw1T" crossorigin="anonymous">
-		<title>Besten Dank</title>
+		<title>Login</title>
 		<!--<link rel="stylesheet" type="text/css" href="../WebServerResources/dankesseite.css">-->
 	</head>
 	<body>
@@ -39,9 +42,9 @@ input[type="image"] {
 		Benutzername:<br>
 		<webobject name = "username" /><br>
 		Passwort:<br>
-		<webobject name = "password" /><br>
+		<webobject name = "password" /><br><br>
 		<webobject name = "submitLogin">Login</webobject<br>
-		<br><webobject name = "errorText" />
+		<br><div class="errorText"><webobject name = "errorText" /></div>
 
 	</webobject>
 	<webobject name="backbutton">Zurück</webobject>
